doc/windows/Delphi/32bit/multi_card/gts.pas

function GT_BufLaserFollowMode(cardNum:SmallInt ;crd:SmallInt;source:SmallInt =0;fifo:SmallInt=0;channel:SmallInt=0;startPower:Double =0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserFollowOff(cardNum:SmallInt ;crd:SmallInt;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserFollowSpline(cardNum:SmallInt ;crd:SmallInt;tableId:SmallInt;minPower:Double;maxPower:Double;fifo:SmallInt=0,channel:SmallInt=0): SmallInt; stdcall; External GTDLL;

function GT_PrfPvt(cardNum:SmallInt ;profile:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_SetPvtLoop(cardNum:SmallInt ;profile:SmallInt;loop:LongInt):SmallInt;stdcall;External GTDLL;
function GT_GetPvtLoop(cardNum:SmallInt ;profile:SmallInt;out pLoopCount:LongInt;out pLoop:LongInt):SmallInt;stdcall;External GTDLL;
function GT_PvtStatus(cardNum:SmallInt ;profile:SmallInt;out pTableId:SmallInt;out pTime:Double;count:SmallInt=1):SmallInt;stdcall;External GTDLL;
function GT_PvtStart(cardNum:SmallInt ;mask:LongInt):SmallInt;stdcall;External GTDLL;
function GT_PvtTableSelect(cardNum:SmallInt ;profile:SmallInt;tableId:SmallInt):SmallInt;stdcall;External GTDLL;

function GT_PvtTable(cardNum:SmallInt ;tableId:SmallInt;count:LongInt;var pTime:Double;var pPos:Double;var pVel:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableEx(cardNum:SmallInt ;tableId:SmallInt;count:LongInt;var pTime:Double;var pPos:Double;var pVelBegin:Double;var pVelEnd:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableComplete(cardNum:SmallInt ;tableId:SmallInt;count:LongInt;var pTime:Double;var pPos:Double;var pA:Double;var pB:Double;var pC:Double;velBegin:Double=0;velEnd:Double=0):SmallInt;stdcall;External GTDLL;
function GT_PvtTablePercent(cardNum:SmallInt ;tableId:SmallInt;count:LongInt;var pTime:Double;var pPos:Double;var pPercent:Double;velBegin:Double=0):SmallInt;stdcall;External GTDLL;
function GT_PvtPercentCalculate(cardNum:SmallInt ;n:LongInt;var pTime:Double;var pPos:Double;var pPercent:Double;velBegin:Double;var pVel:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableContinuous(cardNum:SmallInt ;tableId:SmallInt;count:LongInt;var pPos:Double;var pVel:Double;var pPercent:Double;var pVelMax:Double;var pAcc:Double;var pDec:Double;timeBegin:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtContinuousCalculate(cardNum:SmallInt ;n:LongInt;var pPos:Double;var pVel:Double;var pPercent:Double;var pVelMax:Double;var pAcc:Double;var pDec:Double;var pTime:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableMovePercent(cardNum:SmallInt ;tableId:SmallInt;distance:LongInt;vm:Double;acc:Double;pa1:Double;pa2:Double;dec:Double;pd1:Double;pd2:Double;var pVel:Double;var pAcc:Double;var pDec:Double;var pTime:Double):SmallInt;stdcall;External GTDLL;
function GT_PvtTableMovePercentEx(cardNum:SmallInt ;tableId:SmallInt;distance:LongInt;vm:Double;acc:Double;pa1:Double;pa2:Double;ma:Double;dec:Double;pd1:Double;pd2:Double;md:Double;var pVel:Double;var pAcc:Double;var pDec:Double;var pTime:Double):SmallInt;stdcall;External GTDLL;

function GT_HomeInit(cardNum:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_Home(cardNum:SmallInt ;axis:SmallInt;pos:LongInt;vel:Double;acc:Double;offset:LongInt): SmallInt; stdcall; External GTDLL;
function GT_Index(cardNum:SmallInt ;axis:SmallInt;pos:LongInt;offset:LongInt): SmallInt; stdcall; External GTDLL;
function GT_HomeStop(cardNum:SmallInt ;axis:SmallInt;pos:LongInt;vel:Double;acc:Double): SmallInt; stdcall; External GTDLL;
function GT_HomeSts(cardNum:SmallInt ;axis:SmallInt;out pStatus:Word): SmallInt; stdcall; External GTDLL;

function GT_HandwheelInit(cardNum:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetHandwheelStopDec(cardNum:SmallInt ;slave:SmallInt;decSmoothStop:Double;decAbruptStop:Double): SmallInt; stdcall; External GTDLL;
function GT_StartHandwheel(cardNum:SmallInt ;slave:SmallInt;master:SmallInt;masterEven:SmallInt;slaveEven:SmallInt;intervalTime:SmallInt;acc:Double;dec:Double;vel:Double;stopWaitTime:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_EndHandwheel(cardNum:SmallInt ;slave:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetTrigger(cardNum:SmallInt ;i:SmallInt;out pTrigger:TTrigger): SmallInt; stdcall; External GTDLL;
function GT_GetTrigger(cardNum:SmallInt ;i:SmallInt;out pTrigger:TTrigger): SmallInt; stdcall; External GTDLL;
function GT_GetTriggerStatus(cardNum:SmallInt ;i:SmallInt;out pTriggerStatus:TTriggerStatus;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_GetTriggerStatusEx(cardNum:SmallInt ;i:SmallInt;out pTriggerStatusEx:TTriggerStatusEx;count:SmallInt=1): SmallInt; stdcall; External GTDLL;
function GT_ClearTriggerStatus(cardNum:SmallInt ;i:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetComparePort(cardNum:SmallInt ;channel:SmallInt;hsio0:SmallInt;hsio1:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_ComparePulse(cardNum:SmallInt ;level:SmallInt;outputType:SmallInt;time:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_CompareStop(cardNum:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_CompareStatus(cardNum:SmallInt ;out pStatus:SmallInt;out pCount:LongInt): SmallInt; stdcall; External GTDLL;
function GT_CompareData(cardNum:SmallInt ;encoder:SmallInt;source:SmallInt;pulseType:SmallInt;startLevel:SmallInt;time:SmallInt;var pBuf1:LongInt;count1:SmallInt;var pBuf2:LongInt;count2:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_CompareLinear(cardNum:SmallInt ;encoder:SmallInt;channel:SmallInt;startPos:LongInt;repeatTimes:LongInt;interval:LongInt;time:SmallInt;source:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_CompareContinuePulseMode(cardNum:SmallInt ;mode:SmallInt;count:SmallInt;standTime:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetEncResponseCheck(cardNum:SmallInt ;control:SmallInt;dacThreshold:SmallInt;minEncVel:Double;time:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetEncResponseCheck(cardNum:SmallInt ;control:SmallInt;out pDacThreshold:SmallInt;out pMinEncVel:Double;out pTime:LongInt): SmallInt; stdcall; External GTDLL;
function GT_EnableEncResponseCheck(cardNum:SmallInt ;control:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_DisableEncResponseCheck(cardNum:SmallInt ;control:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_2DCompareMode(cardNum:SmallInt ;chn:SmallInt;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DComparePulse(cardNum:SmallInt ;chn:SmallInt;level:SmallInt;outputType:SmallInt;time:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareStop(cardNum:SmallInt ;chn:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareClear(cardNum:SmallInt ;chn:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareStatus(cardNum:SmallInt ;chn:SmallInt;out pStatus:SmallInt;out pCount:LongInt;out pFifo:SmallInt;out pFifoCount:SmallInt;out pBufCount:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareSetPrm(cardNum:SmallInt ;chn:SmallInt;out pPrm:T2DComparePrm): SmallInt; stdcall; External GTDLL;
function GT_2DCompareData(cardNum:SmallInt ;chn:SmallInt;count:SmallInt;out pBuf:T2DCompareData;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareStart(cardNum:SmallInt ;chn:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareClearData(cardNum:SmallInt ;chn:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_2DCompareSetPreOutTime(cardNum:SmallInt ;chn:SmallInt;preOutputTime:Double): SmallInt; stdcall; External GTDLL;

function GT_SetAxisMode(cardNum:SmallInt ;axis:SmallInt;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetAxisMode(cardNum:SmallInt ;axis:SmallInt;out ppMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetHSIOOpt(cardNum:SmallInt ;value:Word;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetHSIOOpt(cardNum:SmallInt ;out pValue:Word;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LaserPowerMode(cardNum:SmallInt ;laserPowerMode:SmallInt;maxValue:Double;minValue:Double;channel:SmallInt=0;delaymode:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LaserPrfCmd(cardNum:SmallInt ;outputCmd:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LaserOutFrq(cardNum:SmallInt ;outFrq:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetPulseWidth(cardNum:SmallInt ;width:LongWord;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetWaitPulse(cardNum:SmallInt ;mode:Word;waitPulseFrq:Double;waitPulseDuty:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetPreVltg(cardNum:SmallInt ;mode:Word;voltageValue:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLevelDelay(cardNum:SmallInt ;offDelay:Word;onDelay:Word;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_EnaFPK(cardNum:SmallInt ;time1:Word;time2:Word;laserOffDelay:Word;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_DisFPK(cardNum:SmallInt ;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserDisMode(cardNum:SmallInt ;mode:SmallInt;source:SmallInt;out pPos:LongInt;out pScale:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserDisRatio(cardNum:SmallInt ;out pRatio:Double;minPower:Double;maxPower:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetWaitPulseEx(cardNum:SmallInt ;mode:Word;waitPulseFrq:Double;waitPulseDuty:Double): SmallInt; stdcall; External GTDLL;
function GT_SetLaserMode(cardNum:SmallInt ;mode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetLaserFollowSpline(cardNum:SmallInt ;tableId:SmallInt;n:LongInt;var pX:Double;var pY:Double;beginValue:Double;endValue:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetLaserFollowSpline(cardNum:SmallInt ;tableId:SmallInt;n:LongInt;out pX:Double;out pY:Double;out pA:Double;out pB:Double;out pC:Double;out pCount:LongInt;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
